# source

./: .config  .config.O2  .config.O2-minimum  .config.O2LTE  .gitignore  CHANGELOG.md  Config.in  DISCLAIMER.md  Dockerfile  Makefile  README  README.md  build_info.json  config.asshole.old  default.nix  diffconfig  feeds.conf  feeds.conf.default  rules.mk
.github/: formalities.json
.github/workflows/: kernel.yml  merge-upstream.yml
config/: Config-build.in  Config-devel.in  Config-device.in  Config-images.in  Config-kernel.in
configfiles/: config-4.4.30-ar71xx-20161118  config-4.4.47-ar71xx-20170208  config-4.4.47-ar71xx-20170211  config-4.4.47-ar71xx-20170214  config-4.4.47-ar71xx-20170217  config-4.4.47-ar71xx-20170218  config-4.4.50-ar71xx-20170225  config-4.4.50-ar71xx-20170310  config-4.4.50-ar71xx-20170330  config-4.4.56-ar71xx-20170404  config-4.4.56-ar71xx-20170406  config-4.4.56-ar71xx-20170409  config-4.4.59-ar71xx-20170412  config-4.4.61-ar71xx-20170421  config-4.4.61-ar71xx-20170422  config-4.4.61-ar71xx-20170424  config-4.4.61-ar71xx-20170427  config-4.4.61-ar71xx-20170429  config-4.4.71-ar71xx-20170612  config-4.4.71-ar71xx-20170618  config-4.4.71-ar71xx-20170619  config-4.4.74-ar71xx-20170628  lininoconfig
files/etc/: shadow  sysupgrade.conf
files/etc/config/: dhcp  network  onion  system  wireless
files/etc/uci-defaults/: 12_onion_version  13_hostname  14_banner  15_firewall  16_block_mount  16_config_fix  17_omega2_pro  98_opkg  99_mosquitto_ws
include/: barebox.mk  defaults.mk  download.mk  host-build.mk  image-commands.mk  image.mk  kernel-5.15  kernel-6.6  kernel-build.mk  kernel-defaults.mk  kernel-version.mk  kernel.mk  netfilter.mk  package-defaults.mk  package-dumpinfo.mk  package-flags.mk  package-ipkg.mk  package.mk  prereq-build.mk  profiles.mk  scan.mk  subdir.mk  target.mk  toplevel.mk  version.mk
include/site/: powerpc64
kernelfiles/: kconfig-4.4.71-ar71xx-20170612  lininokernel
package/: Makefile
package/base-files/: Makefile
package/boot/arm-trusted-firmware-mediatek/: Makefile
package/boot/barebox-ar71xx/: Makefile
package/boot/grub2/: Makefile
package/boot/grub2-efi-amd64/: Makefile
package/boot/grub2-efi-i386/: Makefile
package/boot/uboot-ar71xx/: Makefile
package/boot/uboot-at91/: Makefile
package/boot/uboot-envtools/: Makefile
package/boot/uboot-imx6/: Makefile
package/boot/uboot-kirkwood/: Makefile
package/boot/uboot-lantiq/: Makefile
package/boot/uboot-layerscape/: Makefile
package/boot/uboot-layerscape-armv8_32b/: Makefile
package/boot/uboot-linino/: Makefile
package/boot/uboot-mediatek/: Makefile
package/boot/uboot-mvebu/: Makefile
package/boot/uboot-omap/: Makefile
package/boot/uboot-oxnas/: Makefile
package/boot/uboot-pxa/: Makefile
package/boot/uboot-sunxi/: Makefile
package/boot/uboot-tegra/: Makefile
package/boot/uboot-traverse/: Makefile
package/boot/uboot-xburst/: Makefile
package/boot/uboot-zynq/: Makefile
package/devel/perf/: Makefile
package/devel/trace-cmd/: Makefile
package/firmware/am33x-cm3/: Makefile
package/firmware/ath10k-firmware/: Makefile
package/firmware/fman-ucode/: Makefile
package/firmware/ipq-wifi/: Makefile
package/firmware/linux-firmware/: Makefile  broadcom.mk
package/firmware/mt76-firmware/: Makefile
package/firmware/phicommk3-firmware/: Config.in
package/firmware/rcw/: Makefile
package/kernel/: UWE5622
package/kernel/acx-mac80211/: Makefile
package/kernel/ath10k-ct/: Makefile
package/kernel/broadcom-wl/: Makefile
package/kernel/exfat/: Makefile
package/kernel/kmod-sched-cake/: Makefile
package/kernel/mac80211/: Makefile  broadcom.mk
package/kernel/mt76/: Makefile
package/kernel/mwlwifi/: Makefile
package/kernel/uwe5622_driver-main/: Kconfig  Makefile  README.md
package/lean/autocore/: Makefile
package/lean/default-settings/: Makefile
package/lean/https-dns-proxy/: Makefile
package/lean/luci-app-flowoffload/: Makefile
package/lean/luci-app-ssr-pro/: Makefile
package/lean/r8152/: Makefile
package/libs/argp-standalone/: Makefile
package/libs/cyassl/: Makefile
package/libs/elfutils/: Makefile
package/libs/gettext/: Makefile
package/libs/gettext-full/: Makefile
package/libs/libconfig/: Makefile
package/libs/libevent2/: Makefile
package/libs/libjson-c/: Makefile
package/libs/libmnl/: Makefile
package/libs/libmtp/: Makefile
package/libs/libnfnetlink/: Makefile
package/linino/openobex/files/: CMakeLists.txt
package/network/utils/sshpass/src/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  config.h.in  configure  configure.ac  main.c  sshpass.1
scripts/: build-node-modules.sh  checkpatch.pl  combined-image.sh  defaults-metadata.pl  dl_cleanup.py  download.pl  feeds  metadata.pl  metadata.pm  mkits.sh  onion-feed-setup.sh  onion-minimal-build.sh  onion-prep-output.sh  onion-setup-build.py  onion-setup-images.py  onion-sign-packages.sh  package-metadata.pl  patch-kernel.sh  patch-lede.sh  rename-node-modules  symlink-tree.sh  target-metadata.pl  versioning_linino
scripts/config/: Makefile
scripts/flashing/: adam2flash-502T.pl
shenzt/: readme
tests/: test_invariant_101-mconsole-exec.patch
toolchain/: Config.in
toolchain/binutils/: Config.in  Config.version  Makefile
toolchain/gcc/: Config.in  Config.version  common.mk
toolchain/kernel-headers/: Makefile
toolchain/musl/: common.mk
toolchain/uClibc/: Config.version  common.mk
tools/: Makefile
tools/b43-tools/: Makefile
tools/cbootimage/: Makefile
tools/cbootimage-configs/: Makefile
tools/ccache/: Makefile
tools/cmake/: Makefile
tools/dosfstools/: Makefile
tools/e2fsprogs/: Makefile
tools/firmware-utils/: Makefile
tools/gettext/: Makefile
tools/glib2/: Makefile
tools/gmp/: Makefile
tools/include/: endian.h  getline.h
tools/libffi/: Makefile
tools/libressl/: Makefile
tools/libtool/: Makefile
tools/make-ext4fs/: Makefile
tools/mtd-utils/: Makefile
tools/pkg-config/: Makefile
tools/qemu/: Makefile
tools/sparse/: Makefile
tools/xz/: Makefile
tools/yaffs2/: Makefile
(+1117 files in other folders)
